--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.7.6",
+    "@binance-chain/javascript-sdk": "^2.16.2",
     "@cosmostation/cosmosjs": "^0.4.5",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@sharekey/meteor-desktop": "^2.2.0",
     "app-builder-lib": "^22.2.0",
     "await-semaphore": "^0.1.3",
     "bip39": "^3.0.2",
+    "bn.js": "^5.1.1",
     "bootstrap": "^4.4.1",
+    "bufferutil": "^4.0.1",
     "cosmos-lib": "^1.1.0",
     "electron-builder": "^21.2.0",
     "electron-packager": "^14.1.1",
@@ -26,7 +29,8 @@
     "meteor-node-stubs": "^1.0.0",
     "moment": "^2.24.0",
     "moment-shortformat": "^2.1.0",
-    "popper.js": "^1.16.0"
+    "popper.js": "^1.16.0",
+    "utf-8-validate": "^5.0.2"
   },
   "devDependencies": {
     "electron": "6.1.2"
