--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "moment": "^2.24.0",
     "moment-shortformat": "^2.1.0",
     "popper.js": "^1.16.0",
-    "utf-8-validate": "^5.0.2"
+    "utf-8-validate": "^5.0.2",
+    "web3": "^1.2.5-rc.0"
   },
   "devDependencies": {
     "electron": "6.1.2"
