--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@sharekey/meteor-desktop": "^2.2.0",
     "app-builder-lib": "^22.2.0",
+    "argon2-browser": "^1.12.0",
+    "argon2-pass": "^1.0.2",
     "await-semaphore": "^0.1.3",
+    "bcryptjs": "^2.4.3",
     "bip39": "^3.0.2",
     "bn.js": "^5.1.1",
     "bootstrap": "^4.4.1",
