--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "qrcode": "^1.4.4",
     "simpl-schema": "^1.5.6",
     "utf-8-validate": "^5.0.2",
+    "uuid": "^3.4.0",
     "web3": "^1.2.5-rc.0"
   },
   "devDependencies": {
