--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "moment-shortformat": "^2.1.0",
     "popper.js": "^1.16.0",
     "qrcode": "^1.4.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "simpl-schema": "^1.5.6",
     "utf-8-validate": "^5.0.2",
     "uuid": "^3.4.0",
