--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "qrcode": "^1.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-mounter": "^1.2.0",
     "simpl-schema": "^1.5.6",
     "utf-8-validate": "^5.0.2",
     "uuid": "^3.4.0",
