--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "react-dom": "^16.12.0",
     "react-mounter": "^1.2.0",
     "simpl-schema": "^1.5.6",
+    "uniforms": "^2.6.6",
+    "uniforms-bootstrap4": "^2.6.6",
+    "uniforms-bridge-simple-schema-2": "^2.6.6",
     "utf-8-validate": "^5.0.2",
     "uuid": "^3.4.0",
     "web3": "^1.2.5-rc.0"
