--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "web3": "^1.2.5-rc.0"
   },
   "devDependencies": {
+    "@types/meteor": "^1.4.40",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
     "electron": "6.1.2"
