--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "jsx": "preserve",
     "incremental": true,
     "noEmit": true,
+    "sourceMap": true,
 
     /* Strict Type-Checking Options */
     "strict": true,
@@ -29,7 +30,7 @@
     },
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "types": ["node", "mocha"],
+    "types": ["node"],
     "esModuleInterop": true,
     "preserveSymlinks": true
   },
