--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@cosmostation/cosmosjs": "^0.4.5",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@sharekey/meteor-desktop": "^2.2.0",
+    "@trustwallet/types": "^0.1.37",
+    "@trustwallet/walletconnect": "^0.1.37",
     "@types/mongodb": "^3.3.16",
     "app-builder-lib": "^22.2.0",
     "argon2-browser": "^1.12.0",
