--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@sharekey/meteor-desktop": "^2.2.0",
     "@trustwallet/types": "^0.1.37",
     "@trustwallet/walletconnect": "^0.1.37",
+    "@types/clipboard": "^2.0.1",
     "@types/mongodb": "^3.3.16",
+    "@types/qrcode": "^1.3.4",
     "app-builder-lib": "^22.2.0",
     "argon2-browser": "^1.12.0",
     "argon2-pass": "^1.0.2",
