--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mongodb": "^3.3.16",
     "@types/qrcode": "^1.3.4",
     "@types/simpl-schema": "^0.2.6",
+    "antd": "^4.0.3",
     "app-builder-lib": "^22.2.0",
     "argon2-browser": "^1.12.0",
     "argon2-pass": "^1.0.2",
