--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "electron-packager": "^14.1.1",
     "eth-keyring-controller": "^5.4.0",
     "events": "^3.1.0",
+    "indexof": "0.0.1",
     "jquery": "^3.4.1",
     "meteor-node-stubs": "^1.0.0",
     "moment": "^2.24.0",
@@ -47,6 +48,7 @@
     "react-mounter": "^1.2.0",
     "simpl-schema": "^1.5.6",
     "uniforms": "^2.6.6",
+    "uniforms-antd": "^2.6.6",
     "uniforms-bootstrap4": "^2.6.6",
     "uniforms-bridge-simple-schema-2": "^2.6.6",
     "utf-8-validate": "^5.0.2",
