--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trustwallet/walletconnect": "^0.1.37",
     "@types/clipboard": "^2.0.1",
     "@types/mongodb": "^3.3.16",
+    "@types/prop-types": "^15.7.3",
     "@types/qrcode": "^1.3.4",
     "@types/simpl-schema": "^0.2.6",
     "antd": "^4.0.3",
@@ -42,6 +43,7 @@
     "moment": "^2.24.0",
     "moment-shortformat": "^2.1.0",
     "popper.js": "^1.16.0",
+    "prop-types": "^15.7.2",
     "qrcode": "^1.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
