--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/prop-types": "^15.7.3",
     "@types/qrcode": "^1.3.4",
     "@types/simpl-schema": "^0.2.6",
+    "acorn": "^7.1.1",
     "antd": "^4.0.3",
     "app-builder-lib": "^22.2.0",
     "argon2-browser": "^1.12.0",
