--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/simpl-schema": "^0.2.6",
     "acorn": "^7.1.1",
     "antd": "^4.0.3",
+    "antd-mobile": "^2.3.1",
     "app-builder-lib": "^22.2.0",
     "argon2-browser": "^1.12.0",
     "argon2-pass": "^1.0.2",
